AMBARI-5536. Confirm Hosts page UI layout issues. (xiwang)

--- a/ambari-web/app/styles/application.less
+++ b/ambari-web/app/styles/application.less
@@ -615,6 +615,9 @@ h1 {
           margin-top: -1px;
         }
       }
+      .tinyspan {
+        width: 2%;
+      }
     }
     .box-header {
       padding: 0px 4px 0px 10px;
@@ -771,16 +774,16 @@ h1 {
     #deploy-status-by-host {
       margin-bottom: 0;
       th.host {
-        width: 30%;
+        width: 40%;
       }
       th.status {
-        width: 35%;
+        width: 22%;
       }
       th.messgage {
         width: 35%;
       }
       .progress-bar {
-        width: 80%;
+        width: 73%;
         .progress {
           margin-bottom: 0;
         }
@@ -5543,10 +5546,6 @@ i.icon-asterisks {
   .row-fluid .span1 {
     width: 5.982905982905983%;
     *width: 5.929714493544281%;
-  }
-
-  .row-fluid .tinyspan {
-    width: 2%;
   }
 
   .row-fluid .offset12 {
